# django-signature-pad

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVNOTES.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
example_project/demo/: admin.py  forms.py  models.py  views.py
example_project/demo/migrations/: 0001_initial.py
example_project/demo/templates/: base.html
example_project/demo/templates/demo/: document_form.html  document_list.html
example_project/example_project/: settings.py  urls.py
src/signature_pad/: __init__.py  apps.py  fields.py  utils.py
src/signature_pad/static/signature_pad/css/: signature_pad_widget.css
src/signature_pad/static/signature_pad/js/: signature_pad_widget.js
src/signature_pad/templates/signature_pad/widgets/: signature_pad.html
src/signature_pad/templatetags/: signature_filters.py
tests/: conftest.py  forms.py  models.py  settings.py  test_fields.py  test_filters.py
