[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-signature-pad"
dynamic = ["version"]
description = "A Django field for capturing signatures using signature_pad"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Hervé Le Roy", email = "hleroy@hleroy.com"},
]
classifiers = [
    "Environment :: Web Environment",
    "Natural Language :: English",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "Django>=5.0",
]

[project.urls]
Homepage = "https://github.com/hleroy/django-signature-pad"

[tool.hatch.build]
packages = ["src/signature_pad"]

[tool.hatch.version]
path = "src/signature_pad/__about__.py"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
pythonpath = [
    ".",
    "src"
]
addopts = "-v"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = [
  "F",       # Pyflakes: checks for various errors
  "E",       # pycodestyle error codes: checks for PEP 8 errors
  "W",       # pycodestyle warning codes: checks for PEP 8 warnings
  "Q",       # flake8-quotes: checks for quote consistency
  "UP",      # pyupgrade: checks for outdated Python syntax
  "YTT",     # flake8-ytt: checks for YAML/templating issues
  "ASYNC",   # flake8-async: checks for async/await syntax issues
  "ISC",     # flake8-isort: checks for import sorting consistency
]
ignore = [
  "ISC001", # single-line-implicit-string-concatenation
]

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
